Fixed z-index.

--- a/projectsStyle.css
+++ b/projectsStyle.css
@@ -83,7 +83,7 @@
   max-height: 200px;
   border: 1px solid rgb(86, 86, 86);
   transition: box-shadow 0.15s ease-in-out;
-  z-index: 2;
+  z-index: 1;
 }
 
 .mProject:hover {
@@ -172,14 +172,12 @@
   user-select: none;
   max-width: 20px;
   max-height: 20px;
-  z-index: 3;
 }
 
 @media screen and (max-width: 1100px) {
   #projects img.arrowIcon {
     width: 4svw;
     height: 4svw;
-    z-index: 3;
   }
 
   .option:first-child {
@@ -199,7 +197,6 @@
   #projects img.arrowIcon {
     width: 2svw;
     height: 2svw;
-    z-index: 3;
   }
 }
 
